--- a/simpleMapGeoJSON.html
+++ b/simpleMapGeoJSON.html
@@ -44,8 +44,7 @@ var geojsonFeature = {
 }
 };
 // and add it to the map
-L.geoJSON(geojsonFeature).addTo(mymap).bindPopup("<b>"+geojsonFeature.properties.name+"
-"+geojsonFeature.properties.popupContent+"<b>");
+L.geoJSON(geojsonFeature).addTo(mymap).bindPopup("<b>" + geojsonFeature.properties.name + " " + geojsonFeature.properties.popupContent+"<b>");
 
 </script>
 </body>
