--- a/simpleMapGeoJSON.html
+++ b/simpleMapGeoJSON.html
@@ -1,17 +1,19 @@
 <html>
 <head>
-<title>Leaflet and Javascript Example</title>
-<!--the following links add the CSS and Javascript required for the Leaflet Map-->
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css"
-integrity="sha512-wcw6ts8Anuw10Mzh9Ytw4pylW8+NAD4ch3lqm9lzAsTxg0GFeJgoAtxuCLREZSC5lUXdVyo/7yfsqFjQ4S+aKw=="crossorigin=""/>
-
-<script src="https://unpkg.com/leaflet@1.1.0/dist/leaflet.js"
-integrity="sha512-mNqn2Wg7tSToJhvHcqfzLMU6J4mkOImSPTxVZAdo+lcPlk+GhZmYgACEe0x35K7YzW1zJ7XyJV/TT1MrdXvMcA=="crossorigin=""></script>
-
-<!-- the following CSS is used to set the size of the Map -->
-<style type="text/css">
-#mapid { height: 180px; }
-</style>
+      <title>Leaflet and Javascript Example</title>
+      <!--the following links add the CSS and Javascript required for the Leaflet Map-->
+      <link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css"
+      integrity="sha512-wcw6ts8Anuw10Mzh9Ytw4pylW8+NAD4ch3lqm9lzAsTxg0GFeJgoAtxuCLREZSC5lUXdVyo/7yfsqFjQ4S+aKw=="crossorigin=""/>
+      <!-- the following links incorporate the CSS required for custom icon creation -->
+      <link rel="stylesheet" href="ionicons.min.css">      
+      <link rel="stylesheet" href="leaflet.awesome-markers.css">
+      <script src="https://unpkg.com/leaflet@1.1.0/dist/leaflet.js"
+      integrity="sha512-mNqn2Wg7tSToJhvHcqfzLMU6J4mkOImSPTxVZAdo+lcPlk+GhZmYgACEe0x35K7YzW1zJ7XyJV/TT1MrdXvMcA=="crossorigin=""></script>
+      <script src="leaflet.awesome-markers.js"></script>
+      <!-- the following CSS is used to set the size of the Map -->
+      <style type="text/css">
+      #mapid { height: 180px; }
+      </style>
 </head>
 <body>
 <!-- the mapid div will hold the map -->
@@ -31,7 +33,6 @@ attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</
  'Imagery © <a href="http://mapbox.com">Mapbox</a>',
 id: 'mapbox.streets'
 }).addTo(mymap);
-
 var geojsonFeature = {
 "type": "Feature",
 "properties": {
@@ -45,7 +46,6 @@ var geojsonFeature = {
 };
 // and add it to the map
 L.geoJSON(geojsonFeature).addTo(mymap).bindPopup("<b>" + geojsonFeature.properties.name + " " + geojsonFeature.properties.popupContent+"<b>");
-
 // create a custom popup
 var popup = L.popup();
 // create an event detector to wait for the user's click event and then use the popup to show them where they clicked
@@ -58,8 +58,15 @@ popup
 }
 // now add the click event detector to the map
 mymap.on('click', onMapClick);
-
-
+var testMarkerPink = L.AwesomeMarkers.icon({
+icon: 'play',
+markerColor: 'pink'
+});
+L.geoJSON(geojsonFeature, {
+pointToLayer: function (feature, latlng) {
+return L.marker(latlng, {icon:testMarkerPink});
+}
+}).addTo(mymap).bindPopup("<b>" + geojsonFeature.properties.name + " " + geojsonFeature.properties.popupContent + "<b>");
 </script>
 </body>
 </html>
