--- a/leafletGeoJSON2.html
+++ b/leafletGeoJSON2.html
@@ -4,6 +4,9 @@
 <!--the following links add the CSS and Javascript required for the Leaflet Map-->
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css"
 integrity="sha512-wcw6ts8Anuw10Mzh9Ytw4pylW8+NAD4ch3lqm9lzAsTxg0GFeJgoAtxuCLREZSC5lUXdVyo/7yfsqFjQ4S+aKw=="crossorigin=""/>
+<!-- the following links incorporate the CSS required for custom icon creation -->
+<link rel="stylesheet" href="ionicons.min.css">
+<link rel="stylesheet" href="leaflet.awesome-markers.css">
 <script src="https://unpkg.com/leaflet@1.1.0/dist/leaflet.js"
 integrity="sha512-mNqn2Wg7tSToJhvHcqfzLMU6J4mkOImSPTxVZAdo+lcPlk+GhZmYgACEe0x35K7YzW1zJ7XyJV/TT1MrdXvMcA=="crossorigin="">
 </script>
@@ -32,13 +35,29 @@ loadEarthquakelayer(earthquakedata);
 var earthquakelayer;
 // convert the received data - which is text - to JSON format and add it to the map
 function loadEarthquakelayer(earthquakedata) {
-// convert the text to JSON
-var earthquakejson = JSON.parse(earthquakedata);
-// add the JSON layer onto the map - it will appear using the default icons
-earthquakelayer = L.geoJson(earthquakejson).addTo(mymap);
-// change the map zoom so that all the data is shown
+// convert the text received from the server to JSON
+var earthquakejson = JSON.parse(earthquakedata );
+// load the geoJSON layer
+earthquakelayer = L.geoJson(earthquakejson,
+{
+// use point to layer to create the points
+pointToLayer: function (feature, latlng)
+{
+// look at the GeoJSON file - specifically at the properties - to see the earthquake magnitude and use a different marker depending on this value
+// also include a pop-up that shows the place value of the earthquakes
+if (feature.properties.mag > 1.75) {
+return L.marker(latlng, {icon:testMarkerRed}).bindPopup("<b>" + feature.properties.place + "</b>");
+}
+else {
+// magnitude is 1.75 or less
+return L.marker(latlng, {icon:testMarkerPink}).bindPopup("<b>" + feature.properties.place + "</b>");;
+}
+},
+}).addTo(mymap);
 mymap.fitBounds(earthquakelayer.getBounds());
 }
+</script>
+<script src="leaflet.awesome-markers.js">
 </script>
 <!-- the following CSS is used to set the size of the Map -->
 <style type="text/css">
@@ -56,14 +75,13 @@ var mymap = L.map('mapid').setView([51.505, -0.09], 13);
 // load the tiles
 L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
 maxZoom: 18,
-attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, '
-+
-' <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>,' 
-+
- 'Imagery © <a href="http://mapbox.com">Mapbox</a>',
+attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors,' + ' <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>,' 
++ 'Imagery © <a href="http://mapbox.com">Mapbox</a>',
 id: 'mapbox.streets'
 }).addTo(mymap);
 document.addEventListener('DOMContentLoaded', function() {getEarthquakes();}, false);
+var testMarkerRed = L.AwesomeMarkers.icon({icon: 'play', markerColor: 'red'});
+var testMarkerPink = L.AwesomeMarkers.icon({icon: 'play',markerColor: 'pink'});
 </script>
 </body>
 </html>
