--- a/multipleLayers.html
+++ b/multipleLayers.html
@@ -16,6 +16,8 @@ integrity="sha512-mNqn2Wg7tSToJhvHcqfzLMU6J4mkOImSPTxVZAdo+lcPlk+GhZmYgACEe0x35K
 <body>
 <!-- the mapid div will hold the map -->
 <div id="mapid" style="width: 600px; height: 400px;"></div>
+<button id="loadData" name="loadData" onclick="loadEarthquakeData()">Click here to load the
+data </button>
 <!-- the following script will load the map and set the default view and zoom, as well as loading the
 basemap tiles -->
 <script>
