Create the corresponding Javascript method for removing the earthquake layer

--- a/multipleLayers.html
+++ b/multipleLayers.html
@@ -40,6 +40,9 @@ earthquakelayer = L.geoJson(earthquakejson).addTo(mymap);
 // change the map zoom so that all the data is shown
 mymap.fitBounds(earthquakelayer.getBounds());
 }
+function removeEarthquakeData() {
+alert("remove the earthquake data here");
+}
 </script>
 <!-- the following CSS is used to set the size of the Map -->
 <style type="text/css">
