--- a/multipleLayers.html
+++ b/multipleLayers.html
@@ -40,8 +40,12 @@ earthquakelayer = L.geoJson(earthquakejson).addTo(mymap);
 // change the map zoom so that all the data is shown
 mymap.fitBounds(earthquakelayer.getBounds());
 }
+// make sure that there is a variable for the earthquake layer to be referenced by
+// this should be GLOBAL – i.e. not inside a function – so that any code can see the variable
+var earthquakelayer;
 function removeEarthquakeData() {
-alert("remove the earthquake data here");
+alert("Earthquake data will be removed");
+mymap.removeLayer( earthquakelayer );
 }
 </script>
 <!-- the following CSS is used to set the size of the Map -->
